@@ -65,6 +65,7 @@ bool SQLExecute(DB_STATEMENT hStmt);
 bool SQLQuery(const TCHAR *pszQuery);
 bool SQLBatch(const TCHAR *pszBatch);
 bool GetYesNo(const TCHAR *format, ...);
+void SetOperationInProgress(bool inProgress);
 void ShowQuery(const TCHAR *pszQuery);
 bool ExecSQLBatch(const char *pszFile);
 bool ValidateDatabase();
